[package]
name = "isoserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
futures = { version="0.3.29" }
http-body-util = "0.1.0"
hyper = "1.1.0"
hyper-util = { version= "0.1.2", features = ["full"]}
log = "0.4.20"
nix = { version = "0.27.1", features = ["sched", "hostname"] }
rand = "0.8.5"
rtnetlink = "0.14.0"
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
